Update asset_category_tutorial.ipynb, assets_tutorial.ipynb, mock_trading.py, and 3 more files

--- a/examples/markets/assets/asset_category_tutorial.ipynb
+++ b/examples/markets/assets/asset_category_tutorial.ipynb
@@ -19,8 +19,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:01:12.968538Z",
-     "start_time": "2025-04-18T19:01:11.467084Z"
+     "end_time": "2025-05-12T07:11:16.448615Z",
+     "start_time": "2025-05-12T07:11:15.052773Z"
     }
    },
    "source": [
@@ -39,11 +39,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:01:11.943404Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
-      "\u001B[2m2025-04-18T19:01:12.266298Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
-      "\u001B[2m2025-04-18T19:01:12.761563Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4205 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/pods/projects/get_user_default_project/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
-      "\u001B[2m2025-04-18T19:01:12.762667Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
-      "\u001B[2m2025-04-18T19:01:12.966538Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.2033 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/ts_manager/api/constants\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:11:15.708013Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-05-12T07:11:15.986899Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-05-12T07:11:16.370651Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.3704 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/pods/projects/get_user_default_project/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-05-12T07:11:16.371782Z\u001B[0m [\u001B[32m\u001B[1minfo     \u001B[0m] \u001B[1mSet remote data source to orm_class='DataSource' id=1 display_name='Default TS GCP' organization=1 class_type='timescale_db' status='AVAILABLE' extra_arguments=None\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at models_tdag.py:2101 in set_remote_db())\n"
      ]
     }
    ],
@@ -60,8 +59,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:01:30.630199Z",
-     "start_time": "2025-04-18T19:01:29.707733Z"
+     "end_time": "2025-05-12T07:11:22.175854Z",
+     "start_time": "2025-05-12T07:11:21.019340Z"
     }
    },
    "source": [
@@ -82,8 +81,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:01:30.166217Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4567 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
-      "\u001B[2m2025-04-18T19:01:30.628316Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4597 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:11:21.653616Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.6327 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-05-12T07:11:22.173699Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.5173 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     }
    ],
@@ -112,8 +111,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:01:35.966072Z",
-     "start_time": "2025-04-18T19:01:35.285714Z"
+     "end_time": "2025-05-12T07:12:19.696540Z",
+     "start_time": "2025-05-12T07:12:19.247730Z"
     }
    },
    "source": [
@@ -127,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:01:35.964365Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.6771 seconds. Requesting GET from http://127.0.0.1:8000/user/api/user/get_user_details/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:12:19.694478Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4458 seconds. Requesting GET from http://127.0.0.1:8000/user/api/user/get_user_details/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     }
    ],
@@ -137,8 +136,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:01:42.910279Z",
-     "start_time": "2025-04-18T19:01:42.132118Z"
+     "end_time": "2025-05-12T07:17:32.810483Z",
+     "start_time": "2025-05-12T07:17:31.940983Z"
     }
    },
    "source": [
@@ -156,26 +155,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:01:42.466141Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.3326 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
-      "\u001B[2m2025-04-18T19:01:42.907789Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4407 seconds. Requesting POST from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:17:32.327107Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.3848 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-05-12T07:17:32.808222Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4798 seconds. Requesting POST from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Categories: Crypto: orm_class='AssetCategory' id=9 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n"
+      "Created Categories: Crypto: orm_class='AssetCategory' id=38 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:01:56.051997Z",
-     "start_time": "2025-04-18T19:01:55.071239Z"
+     "end_time": "2025-05-12T07:22:10.496546Z",
+     "start_time": "2025-05-12T07:22:09.515347Z"
     }
    },
    "source": [
@@ -194,11 +193,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:01:56.049919Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.9774 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:22:10.494406Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.9777 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -223,8 +222,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:02:03.066916Z",
-     "start_time": "2025-04-18T19:02:02.037754Z"
+     "end_time": "2025-05-12T07:17:46.128104Z",
+     "start_time": "2025-05-12T07:17:45.131541Z"
     }
    },
    "source": [
@@ -236,18 +235,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:02:03.064721Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 1.0261 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:17:46.125630Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.9929 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Existing Categories: [MAGNIFICENT 7 source: mainsequence, 7 assets, S&P500 Constitutents source: datahub.io, 472 assets, Top 10 US Equity Market Cap source: polygon, 10 assets, Top 50 US Equity Market Cap source: polygon, 50 assets, Top 100 US Equity Market Cap source: polygon, 100 assets, Top 10 Crypto Market Cap source: coingecko, 10 assets, Top 50 Crypto Market Cap source: coingecko, 50 assets, Top 100 Crypto Market Cap source: coingecko, 100 assets, Favorite Crypto source: user_defined, 0 assets]\n"
+      "Existing Categories: [Top 100 Crypto Market Cap source: coingecko, 100 assets, Top 10 Crypto Market Cap source: coingecko, 10 assets, Top 50 Crypto Market Cap source: coingecko, 50 assets, MAGNIFICENT 7 source: mainsequence, 7 assets, S&P500 Constitutents source: datahub.io, 472 assets, Top 10 US Equity Market Cap source: polygon, 10 assets, Top 50 US Equity Market Cap source: polygon, 50 assets, Top 100 US Equity Market Cap source: polygon, 100 assets, Favorite Crypto source: user_defined, 0 assets]\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -260,8 +259,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:02:14.531068Z",
-     "start_time": "2025-04-18T19:02:13.420903Z"
+     "end_time": "2025-05-12T07:17:51.115149Z",
+     "start_time": "2025-05-12T07:17:49.984191Z"
     }
    },
    "source": [
@@ -280,20 +279,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:02:13.916172Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4941 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
-      "\u001B[2m2025-04-18T19:02:14.528510Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.6113 seconds. Requesting POST from http://127.0.0.1:8000/orm/api/assets/asset-category/9/append-assets/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:17:50.501737Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.5160 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-05-12T07:17:51.112815Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.6097 seconds. Requesting POST from http://127.0.0.1:8000/orm/api/assets/asset-category/38/append-assets/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated Crypto Category: orm_class='AssetCategory' id=9 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[23812] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n",
+      "Updated Crypto Category: orm_class='AssetCategory' id=38 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[23812] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n",
       "[23812]\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -306,8 +305,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-18T19:02:23.413048Z",
-     "start_time": "2025-04-18T19:02:22.929844Z"
+     "end_time": "2025-05-12T07:22:14.186991Z",
+     "start_time": "2025-05-12T07:22:13.714799Z"
     }
    },
    "source": [
@@ -319,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-04-18T19:02:23.411160Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4801 seconds. Requesting DELETE from http://127.0.0.1:8000/orm/api/assets/asset-category/2/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-12T07:22:14.184672Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4690 seconds. Requesting DELETE from http://127.0.0.1:8000/orm/api/assets/asset-category/33/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     },
     {
@@ -330,7 +329,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
